:truck: Rename folder and functions

--- a/configs.json
+++ b/configs.json
@@ -2,5 +2,6 @@
     "min_pitch": -0.5,
     "max_pitch": 0.5,
     "pitch_window_range": 0.1,
-    "reconstruct": false
+    "reconstruct": false,
+    "volume": 1
 }
